# maxauto_custom

./: .gitignore  MANIFEST.in  README.md  hooks.py  max  modules.txt  pyproject.toml  setup.py
asset_tools/: hooks.py  modules.txt
asset_tools/page/asset_label_sheet/: asset_label_sheet.py
commands/: __init__.py
fixtures/: workspace.json
maxauto/cnc/: __init__.py
maxauto/doctype/: product
maxauto/doctype/bobbin/: bobbin.py
maxauto/doctype/closing_batch/: closing_batch.json  closing_batch.py
maxauto/doctype/closing_batch_input/: closing_batch_input.py
maxauto/doctype/engineering_project/: engineering_project.json  engineering_project.py
maxauto/doctype/engineering_project_link/: engineering_project_link.json  engineering_project_link.py
maxauto/doctype/feasibility_study/: feasibility_study.json  feasibility_study.py
maxauto/doctype/inspection_record/: inspection_record.json
maxauto/doctype/inspection_test_result/: inspection_test_result.json  inspection_test_result.py
maxauto/doctype/machine/: machine.json  machine.py
maxauto/doctype/machine_capability/: machine_capability.json  machine_capability.py
maxauto/doctype/manufacturing_operation_execution/: manufacturing_operation_execution.json  manufacturing_operation_execution.py
maxauto/doctype/manufacturing_operation_type/: manufacturing_operation_type.json
maxauto/doctype/manufacturing_routing/: manufacturing_routing.json
maxauto/doctype/manufacturing_routing_operation/: manufacturing_routing_operation.json  manufacturing_routing_operation.py
maxauto/doctype/material_specification/: material_specification.json
maxauto/doctype/packing_record/: packing_record.json  packing_record.py
maxauto/doctype/plant/: plant.py  test_plant.py
maxauto/doctype/rope_construction/: rope_construction.json  rope_construction.py
maxauto/doctype/stranding_batch/: stranding_batch.json  stranding_batch.py
maxauto/doctype/stranding_batch_bobbin/: stranding_batch_bobbin.json  stranding_batch_bobbin.py
maxauto/doctype/supplier_approved_material/: supplier_approved_material.json  supplier_approved_material.py
maxauto/doctype/unit_wip_transfer/: unit_wip_transfer.json  unit_wip_transfer.py
maxauto/engineering/: __init__.py
maxauto/engineering/doctypes/engineering_project/: engineering_project.json
maxauto/engineering/doctypes/engineering_project_link/: engineering_project_link.json
maxauto/engineering/doctypes/feasibility_study/: feasibility_study.json
maxauto/engineering/doctypes/product_specification/: product_specification.json  product_specification.py
maxauto/inventory/: __init__.py
maxauto/inventory/doctypes/unit_wip_transfer/: unit_wip_transfer.json  unit_wip_transfer.py
maxauto/manufacturing/: __init__.py
maxauto/manufacturing/doctypes/machine/: machine.json  machine.py
maxauto/manufacturing/doctypes/machine_capability/: machine_capability.json
maxauto/manufacturing/doctypes/manufacturing_operation_type/: manufacturing_operation_type.json  manufacturing_operation_type.py
maxauto/manufacturing/doctypes/manufacturing_routing/: manufacturing_routing.json  manufacturing_routing.py
maxauto/manufacturing/doctypes/manufacturing_routing_operation/: manufacturing_routing_operation.json
maxauto/material/doctype/material_specification/: material_specification.py
maxauto/mes/: __init__.py
maxauto/packing/: __init__.py
maxauto/packing/doctypes/packing_record/: packing_record.json  packing_record.py
maxauto/page/asset_label_sheet/: asset_label_sheet.html  asset_label_sheet.js  asset_label_sheet.json
maxauto/plant/doctype/plant/: plant.json  test_plant.py
maxauto/print_format/purchase_order_maxauto/: __init__.py  purchase_order_maxauto.html  purchase_order_maxauto.json
maxauto/print_format/rfq_maxauto/: __init__.py  rfq_maxauto.html  rfq_maxauto.json
maxauto/quality/doctype/supplier_approval/: supplier_approval.json  supplier_approval.py
maxauto/quality/doctypes/inspection_record/: inspection_record.json  inspection_record.py
maxauto/quality/doctypes/inspection_test_result/: inspection_test_result.json
maxauto/report/: plant_wise  plant_wise_purchase
maxauto/rope_cable/: __init__.py
maxauto/rope_cable/doctypes/bobbin/: bobbin.json
maxauto/rope_cable/doctypes/closing_batch/: closing_batch.json
maxauto/rope_cable/doctypes/closing_batch_input/: closing_batch_input.json
maxauto/rope_cable/doctypes/rope_construction/: rope_construction.json
maxauto/rope_cable/doctypes/stranding_batch/: stranding_batch.json
maxauto/rope_cable/doctypes/stranding_batch_bobbin/: stranding_batch_bobbin.json
maxauto/shopfloor/: __init__.py
maxauto/shopfloor/doctypes/manufacturing_operation_execution/: manufacturing_operation_execution.json  manufacturing_operation_execution.py
maxauto/shopfloor/doctypes/mes_event_log/: mes_event_log.json  mes_event_log.py
maxauto/workspace/maxauto/: maxauto.json
maxauto_custom/: __init__.py  hooks.py  modules.txt  setup.py
