[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxauto_custom"
version = "1.0.0"
authors = [
    {name = "Max Auto Cables Pvt Ltd", email = "info@maxautocables.com"},
]
description = "MaxAuto Manufacturing Platform - Comprehensive ERP for rope/cable manufacturing, CNC machining, and multi-unit operations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "frappe",
]

[project.urls]
Homepage = "https://github.com/ssamax10/maxauto_custom"

[tool.setuptools]
packages = [
    "maxauto_custom",
    "maxauto",
    "maxauto.page",
    "maxauto.page.asset_label_sheet",
    "maxauto.engineering",
    "maxauto.manufacturing",
    "maxauto.rope_cable",
    "maxauto.cnc",
    "maxauto.shopfloor",
    "maxauto.inventory",
    "maxauto.quality",
    "maxauto.packing",
    "maxauto.mes",
    "maxauto.doctype",
    "maxauto.doctype.engineering_project",
    "maxauto.doctype.engineering_project_link",
    "maxauto.doctype.feasibility_study",
    "maxauto.doctype.product_specification",
    "maxauto.doctype.machine",
    "maxauto.doctype.machine_capability",
    "maxauto.doctype.manufacturing_routing",
    "maxauto.doctype.manufacturing_operation_type",
    "maxauto.doctype.manufacturing_routing_operation",
    "maxauto.doctype.rope_construction",
    "maxauto.doctype.bobbin",
    "maxauto.doctype.stranding_batch",
    "maxauto.doctype.closing_batch",
    "maxauto.doctype.stranding_batch_bobbin",
    "maxauto.doctype.closing_batch_input",
    "maxauto.doctype.manufacturing_operation_execution",
    "maxauto.doctype.mes_event_log",
    "maxauto.doctype.unit_wip_transfer",
    "maxauto.doctype.inspection_record",
    "maxauto.doctype.inspection_test_result",
    "maxauto.doctype.packing_record",
]

[tool.setuptools.package-data]
maxauto = ["doctype/*/*.json", "doctype/*/*.js", "doctype/*/*.html"]

[tool.bench]
app-dependencies = [
    "frappe",
]
