[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxauto_custom"
version = "1.1.0"
authors = [
    {name = "Max Auto Cables Pvt Ltd", email = "info@maxautocables.com"},
]
description = "MaxAuto Manufacturing Platform - Comprehensive ERP for rope/cable manufacturing, CNC machining, and multi-unit operations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ssamax10/maxauto_custom"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "maxauto_custom",
    "maxauto_custom.*",
    "maxauto",
    "maxauto.*",
    "commands",
    "commands.*"
]

[tool.setuptools.package-data]
maxauto = [
    "doctype/*/*.json",
    "doctype/*/*.js",
    "doctype/*/*.html",
    "plant/doctype/*/*.json",
    "plant/doctype/*/*.js",
    "plant/doctype/*/*.html",
    "material/doctype/*/*.json",
    "material/doctype/*/*.js",
    "material/doctype/*/*.html",
    "purchasing/doctype/*/*.json",
    "purchasing/doctype/*/*.js",
    "purchasing/doctype/*/*.html",
    "report/report/*/*.json",
    "report/report/*/*.js",
    "report/report/*/*.py",
    "print_format/print_format/*/*.json",
    "print_format/print_format/*/*.html",
    "workflow/workflow/*/*.json",
    "page/*/*.json",
    "page/*/*.js",
    "page/*/*.html"
]

[tool.bench]
app-dependencies = [
    "frappe",
]